Fix connection string

--- a/MDTManagment/MDTManagment/App.config
+++ b/MDTManagment/MDTManagment/App.config
@@ -18,6 +18,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.\;Initial Catalog=MDTManagment;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=MDTManagment;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
