--- a/MDTManagment/MDTManagment.Services/MDTManagment.Services.csproj
+++ b/MDTManagment/MDTManagment.Services/MDTManagment.Services.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DentistService.cs" />
+    <Compile Include="OrderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
