--- a/MDTManagment/MDTManagment.Models/MDTManagment.Models.csproj
+++ b/MDTManagment/MDTManagment.Models/MDTManagment.Models.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Dentist.cs" />
+    <Compile Include="Order.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
