Correction the database, Displaying The Patients

--- a/MDTManagment/MDTManagment.Models/MDTManagment.Models.csproj
+++ b/MDTManagment/MDTManagment.Models/MDTManagment.Models.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="Dentist.cs" />
     <Compile Include="Order.cs" />
+    <Compile Include="Patient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
