--- a/MDTManagment/MDTManagment.Services/MDTManagment.Services.csproj
+++ b/MDTManagment/MDTManagment.Services/MDTManagment.Services.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseService.cs" />
     <Compile Include="DentistService.cs" />
     <Compile Include="OrderService.cs" />
     <Compile Include="PatientService.cs" />
