--- a/MDTManagment/MDTManagment.Models/MDTManagment.Models.csproj
+++ b/MDTManagment/MDTManagment.Models/MDTManagment.Models.csproj
@@ -50,7 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DeclaredIngredients.cs" />
+    <Compile Include="Ingredient.cs" />
     <Compile Include="Dentist.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="Patient.cs" />
