--- a/MDTManagment/MDTManagment/packages.config
+++ b/MDTManagment/MDTManagment/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="MahApps.Metro" version="1.3.0" targetFramework="net45" />
   <package id="Xamarin.Forms" version="2.2.0.45" targetFramework="net452" />
 </packages>
