Variant 1 for HomePage button

--- a/MDTManagment/MDTManagment.Models/MDTManagment.Models.csproj
+++ b/MDTManagment/MDTManagment.Models/MDTManagment.Models.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Activity.cs" />
     <Compile Include="Ingredient.cs" />
     <Compile Include="Dentist.cs" />
     <Compile Include="Order.cs" />
