--- a/MDTManagment/MDTManagment/MDTManagment.csproj
+++ b/MDTManagment/MDTManagment/MDTManagment.csproj
@@ -91,26 +91,15 @@
     <Compile Include="StartupWindow.xaml.cs">
       <DependentUpon>StartupWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="ViewModels\Activities\ActivitiesViewModel.cs" />
-    <Compile Include="ViewModels\Activities\AddActivityViewModel.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
     <Compile Include="ViewModels\Dentists\AddDentistViewModel.cs" />
     <Compile Include="ViewModels\Dentists\DentistsViewModel.cs" />
-    <Compile Include="ViewModels\Dentists\DentistViewModel.cs" />
     <Compile Include="ViewModels\Home\HomeViewModel.cs" />
     <Compile Include="ViewModels\Orders\AddOrderViewModel.cs" />
     <Compile Include="ViewModels\Patients\SelectDentistViewModel.cs" />
     <Compile Include="ViewModels\Orders\OrdersVeiwModel.cs" />
-    <Compile Include="ViewModels\Orders\OrderViewModel.cs" />
     <Compile Include="ViewModels\Patients\AddPatientViewModel.cs" />
     <Compile Include="ViewModels\Patients\PatientsViewModel.cs" />
-    <Compile Include="ViewModels\Patients\PatientViewModel.cs" />
-    <Compile Include="Views\Activities\ActivitiesPage.xaml.cs">
-      <DependentUpon>ActivitiesPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Activities\AddActivityPage.xaml.cs">
-      <DependentUpon>AddActivityPage.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Views\Dentists\AddDentistPage.xaml.cs">
       <DependentUpon>AddDentistPage.xaml</DependentUpon>
     </Compile>
@@ -119,9 +108,6 @@
     </Compile>
     <Compile Include="Views\Patients\AddPatientPage.xaml.cs">
       <DependentUpon>AddPatientPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Dentists\DentistPage.xaml.cs">
-      <DependentUpon>DentistPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Dentists\DentistsPage.xaml.cs">
       <DependentUpon>DentistsPage.xaml</DependentUpon>
@@ -132,9 +118,6 @@
     <Compile Include="Views\Orders\OrdersPage.xaml.cs">
       <DependentUpon>OrdersPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\Patients\PatientPage.xaml.cs">
-      <DependentUpon>PatientPage.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Views\Patients\PatientsPage.xaml.cs">
       <DependentUpon>PatientsPage.xaml</DependentUpon>
     </Compile>
@@ -143,14 +126,6 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="StartupWindow.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\Activities\ActivitiesPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\Activities\AddActivityPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -166,10 +141,6 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\Dentists\DentistPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="Views\Dentists\DentistsPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -179,10 +150,6 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Orders\OrdersPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\Patients\PatientPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -234,20 +201,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\HomePageImage.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resources\avatar.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resources\try.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resources\DentistNav.jpg" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Resources\1.png" />
   </ItemGroup>
   <ItemGroup>
@@ -260,9 +213,6 @@
     <Resource Include="Resources\5.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\delete.png" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Resources\add.png" />
   </ItemGroup>
   <ItemGroup>
@@ -272,10 +222,10 @@
     <Resource Include="Resources\0.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\99logo.jpg" />
+    <Resource Include="Resources\logo.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\99logo2.png" />
+    <Resource Include="Resources\icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.2.0.45\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.2.0.45\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
