--- a/MDTManagment/MDTManagment.Models/MDTManagment.Models.csproj
+++ b/MDTManagment/MDTManagment.Models/MDTManagment.Models.csproj
@@ -53,6 +53,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Dentist.cs" />
+    <Compile Include="MonthlyReport.cs" />
+    <Compile Include="MonthlyReportDetailsByDentist.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="Patient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
