--- a/MDTManagment/MDTManagment.Services/MDTManagment.Services.csproj
+++ b/MDTManagment/MDTManagment.Services/MDTManagment.Services.csproj
@@ -57,6 +57,7 @@
     <Compile Include="OrderService.cs" />
     <Compile Include="PatientService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReportService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MDTManagment.Data\MDTManagment.Data.csproj">
